--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <style>
         * { font-family: Arial, Verdana, Helvetica, sans-serif; }
         html, body { height: 100%; overflow: hidden; }
-        body { height: 100%; verflow: hidden; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center; }
+        body { height: 100%; overflow: hidden; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center; }
     </style>
 </head>
 <body>
