no nice things, ensure 503, serve index html, be done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <article>
-        <h1>Page temporarily unavailable.</h1>
+        <h1>Page temporarily unavailable</h1>
         <p>We are performing scheduled maintenance.</p>
     </article>
 </body>
